# spectraq_solana

./: .env.demo  .gitignore  2026-05-02-203203-this-session-is-being-continued-from-a-previous-c.txt  2026-05-03-065702-this-session-is-being-continued-from-a-previous-c.txt  2026-05-04-215249-this-session-is-being-continued-from-a-previous-c.txt  2026-05-06-183659-this-session-is-being-continued-from-a-previous-c.txt  2026-05-06-183937-this-session-is-being-continued-from-a-previous-c.txt  Anchor.toml  Arcium.toml  Cargo.toml  DEMO_SCRIPT.md  README.md  ROADMAP.md  SECURITY.md  final_bug.txt  final_bug_two.txt  onelifebaby.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prompt_0_1_chat.txt  prompt_2_3_4.txt  prompt_5_6.txt  prompt_7_8.txt  tsconfig.json
.claude/: memory.md
OG_frontend/: .gitignore  package-lock.json  package.json
OG_frontend/app/: globals.css  layout.tsx  page.tsx
OG_frontend/components/: Footer.tsx  Header.tsx  Logo.tsx
agent/: README.md  package.json  tsconfig.json
agent/src/: arcium.ts  config.ts  index.ts  jupiter.ts  metrics.ts  priceFeed.ts  raydium.ts  safety.ts  trader.ts
agent/test/: agent.test.ts
artifacts/: circuits_hash.txt
encrypted-ixs/: Cargo.toml
encrypted-ixs/src/: lib.rs
frontend/: package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: AgentActivity.tsx  (+13 more)
programs/spectraq_vault/: Cargo.toml
programs/spectraq_vault/src/: constants.rs  errors.rs  events.rs  lib.rs  oracle.rs  state.rs
programs/spectraq_vault/src/instructions/: callback_signal.rs  deposit_sol.rs  deposit_usdc.rs  execute_trade.rs  init_ma_signal_comp_def.rs  initialize_vault.rs  mock_callback_signal.rs  mod.rs  request_signal_computation.rs  settle_pnl.rs  withdraw.rs
scripts/: add_pool_liquidity.ts  create_raydium_pool.ts  demo.sh  force_reupload_arcium_circuit.ts  init-mxe.sh  initialize_vault.ts  preflight.sh  rebalance_pool.ts  remove_pool_liquidity.ts  seed_demo_funds.ts  upload_arcium_circuit.ts
strategy/: README.md  pyproject.toml
strategy/notebooks/: 01_validate_ma_crossover.ipynb  build_notebook.py
strategy/scripts/: export_params.py  run_validation.py
strategy/spectraq_strategy/: __init__.py  data.py  ma_strategy.py  mcpt.py  permutation.py
strategy/spectraq_strategy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: 01_vault.ts  02_arcium.ts  03_arcium_determinism.ts  03_oracle.ts  04_jupiter.ts  04_raydium.ts
(+32 files in other folders)
