[package]
name = "encrypted-ixs"
version = "0.1.0"
description = "SpectraQ Arcis MPC circuits (compute_ma_signal)"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "encrypted_ixs"

[features]
default = []

[dependencies]
arcis = "0.9.7"
blake3 = "=1.8.2"
proc-macro-crate = "=3.3.0"
