[project]
name = "spectraq-strategy"
version = "0.1.0"
description = "SpectraQ — MA crossover + MCPT validation suite (offline only, not runtime)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "ccxt>=4.4",
    "matplotlib>=3.9",
    "numba>=0.60",
    "pyarrow>=17.0",
    "ipykernel>=6.29",
    "jupyterlab>=4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["spectraq_strategy*"]

[tool.ruff]
line-length = 100
target-version = "py311"
